# ebtc-multisig

./: README.md  ape_safe.py  brownie-config.yaml  brownie_safe.py  network-config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: ebtc_governance_change_form.yaml  ebtc_treasury_operation_form.yaml
.github/workflows/: black.yml  codeql-analysis.yml
contracts/mock/: MockFallbackCaller.sol  PriceFeedTester.sol
data/authority_audit/: authority_audit_sepolia-fork.csv
data/timelocks_audit/: highsec_timelock_audit_sepolia-fork_1709915840.csv  lowsec_timelock_audit_sepolia-fork_1709915836.csv
great_ape_safe/: great_ape_safe.py
great_ape_safe/ape_api/: __init__.py  ebtc.py  uni_v3.py
helpers/: addresses.py  constants.py  utils.py
interfaces/Lido/: ILido.sol
interfaces/balancer/: IBalancerOracle.sol  IBalancerVault.sol
interfaces/ebtc/: IActivePool.sol  IBorrowerOperations.sol  ICdpManager.sol  ICollSurplusPool.sol  ICollateralToken.sol  ICollateralTokenTester.sol  IEBTCDeployer.sol  IEBTCToken.sol  IERC20.sol  IEbtcBsm.sol  IEbtcFeed.sol  IEscrow.sol  IFeeRecipient.sol  IGovernor.sol  IHintHelpers.sol  ILiquidationLibrary.sol  IMockFallbackCaller.sol  IMultiCdpGetter.sol  IOraclePriceConstraint.sol  IPriceFeed.sol  IPriceFeedTestnet.sol  ISortedCdps.sol  (+3 more)
scripts/: bsm_auth.py  bsm_minting.py  cdp_management_lens.py  ebtc_cdp_ops.py  ebtc_governance.py  ebtc_governance_lens.py  ebtc_timelock_lens.py  ebtc_timelocks.py  ebtc_treasury,py  ebtc_treasury.py  merkl_incentive_campaign.py  stebtc_auth.py  univ3_management.py
tests/: conftest.py
(+26 files in other folders)
