[tool.poetry]
name = "ebtc-multisig"
version = "0.1.0"
description = "eBTC's EVM multisig operations."
authors = ["Gosuto Inzasheru <mail@gosuto.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
brownie-safe = "*"
dotmap = "*"
eth-brownie = "1.20.5"
pandas = "*"
pycoingecko = "^3.1.0"
rich = "*"
sympy = "*"
tabulate = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
brownie-token-tester = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
